feat: Integrate school settings and add SMS service
This commit introduces a major feature update that includes:

- A new SMS service for sending notifications to students and parents.
- A new `SchoolSettings` model to make school-specific information configurable.
- Updates to the report card generation service to use the new school settings.
- New configuration files and environment variable support for easier setup and deployment.
- A script to fix the database migration history.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SchoolDB;User Id=sa;Password=scherp@2025;TrustServerCertificate=True"
   }
 }
