connection string update

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=SchoolDB;User Id=sa;Password=scherp@2025;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=SchoolDB;Username=postgres;Password=postgres"
   }
 }
